[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/engine/worldloader.gd" type="Script" id=1]
[ext_resource path="res://mat/ui/spinner.png" type="Texture" id=2]
[ext_resource path="res://sound/engine/finish.wav" type="AudioStream" id=3]
[ext_resource path="res://mat/ui/logo.png" type="Texture" id=4]
[ext_resource path="res://sound/engine/notification.wav" type="AudioStream" id=5]
[ext_resource path="res://scripts/engine/notificationPanel.gd" type="Script" id=6]
[ext_resource path="res://mat/ui/font/FreeSans-outline.tres" type="DynamicFont" id=7]
[ext_resource path="res://scripts/engine/chatbox.gd" type="Script" id=8]

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "notifAnimation"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ 2.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ 2.0, 0.0 ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=7]
resource_name = "notifAnimationHide"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ 0.0, 2.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ 0.0, 2.0 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:anchor_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:anchor_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../bannerPanel:anchor_top")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../bannerPanel:anchor_bottom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "slideDown"
tracks/0/type = "value"
tracks/0/path = NodePath(".:anchor_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ 1.0, 1.1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:anchor_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ 1.0, 1.1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../bannerPanel:anchor_top")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ 0.3, -0.1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../bannerPanel:anchor_bottom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ 0.3, -0.1 ]
}

[sub_resource type="Animation" id=1]
resource_name = "spinner"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="GameplayWorld" type="Spatial"]
script = ExtResource( 1 )

[node name="UI_ontop" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="hacky" type="CanvasLayer" parent="UI_ontop"]
layer = 128

[node name="notifDisplay" type="VBoxContainer" parent="UI_ontop/hacky"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 0.85
margin_left = -127.0
margin_right = -16.0
grow_horizontal = 0
alignment = 2

[node name="notifTemplate" type="PanelContainer" parent="UI_ontop/hacky/notifDisplay"]
visible = false
anchor_left = 2.0
anchor_right = 2.0
margin_top = 487.0
margin_right = 111.0
margin_bottom = 510.0
script = ExtResource( 6 )

[node name="notifText" type="Label" parent="UI_ontop/hacky/notifDisplay/notifTemplate"]
margin_left = 1.0
margin_top = 1.0
margin_right = 110.0
margin_bottom = 22.0
text = "Notification text"
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI_ontop/hacky/notifDisplay/notifTemplate"]
anims/RESET = SubResource( 6 )
anims/notifAnimation = SubResource( 4 )
anims/notifAnimationHide = SubResource( 7 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="UI_ontop/hacky/notifDisplay/notifTemplate"]
stream = ExtResource( 5 )

[node name="developer" type="Control" parent="UI_ontop/hacky"]
margin_right = 40.0
margin_bottom = 40.0

[node name="topleft" type="PanelContainer" parent="UI_ontop/hacky/developer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 40.0
margin_bottom = 40.0

[node name="text" type="Label" parent="UI_ontop/hacky/developer/topleft"]
margin_left = 1.0
margin_top = 9.0
margin_right = 72.0
margin_bottom = 30.0
text = "developer"

[node name="chatbox" type="Control" parent="UI_ontop/hacky"]
anchor_left = 0.05
anchor_top = 0.65
anchor_right = 0.4
anchor_bottom = 0.9
script = ExtResource( 8 )

[node name="VBox" type="VBoxContainer" parent="UI_ontop/hacky/chatbox"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 2

[node name="ChatOutput" type="RichTextLabel" parent="UI_ontop/hacky/chatbox/VBox"]
margin_right = 358.0
margin_bottom = 123.0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 7 )
scroll_following = true

[node name="ChatInput" type="LineEdit" parent="UI_ontop/hacky/chatbox/VBox"]
margin_top = 127.0
margin_right = 358.0
margin_bottom = 150.0
max_length = 100
editable = false
secret_character = "x"
expand_to_text_length = true
clear_button_enabled = true
caret_blink = true

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Image" type="Sprite" parent="UI"]
position = Vector2( 495, 304 )
scale = Vector2( 0.353766, 0.323837 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI"]
root_node = NodePath("../throbberPanel")
anims/RESET = SubResource( 2 )
anims/slideDown = SubResource( 3 )
anims/spinner = SubResource( 1 )

[node name="bannerPanel" type="PanelContainer" parent="UI"]
anchor_left = 0.5
anchor_top = 0.3
anchor_right = 0.5
anchor_bottom = 0.3
margin_left = -57.0
margin_top = -14.0
margin_right = 57.0
margin_bottom = 14.0
grow_horizontal = 2

[node name="Label" type="Label" parent="UI/bannerPanel"]
margin_left = 1.0
margin_top = 3.0
margin_right = 113.0
margin_bottom = 24.0
text = "Uhhh..."
align = 1
valign = 1

[node name="throbberPanel" type="Panel" parent="UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = -54.0
margin_right = 124.0
margin_bottom = -24.0

[node name="Label" type="Label" parent="UI/throbberPanel"]
anchor_bottom = 1.0
margin_right = 73.0
text = "Loading"
align = 1
valign = 1

[node name="Sprite" type="Sprite" parent="UI/throbberPanel"]
position = Vector2( 84, 15 )
rotation = 2.51327
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="finishSound" type="AudioStreamPlayer" parent="UI"]
stream = ExtResource( 3 )
